Add Footer and Edit UpButton

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,20 +12,29 @@
         "Nathej",
         "Omeg",
         "PUBG",
+        "Pellentesque",
         "Smithee",
         "Tarek",
         "Valorant",
+        "Vivamus",
         "conts",
+        "convallis",
+        "dapibus",
         "dipiscingei",
         "dispic",
+        "eget",
         "eiusmod",
         "elit",
         "hored",
         "icns",
         "imgs",
+        "justo",
+        "lacinia",
         "lisum",
         "mainmenu",
         "noreferrer",
+        "orci",
+        "porta",
         "predeploy",
         "rela",
         "templatemo",
